# open_llm-orchestration

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_pgvector_embedding.py
backend/src/orchestration/: __init__.py
backend/src/orchestration/gateway/: __init__.py  app.py  deps.py
backend/src/orchestration/gateway/middleware/: auth.py  metrics.py  rate_limit.py  tenant.py  tracing.py
backend/src/orchestration/gateway/routers/: auth.py  documents.py  plugins.py  sessions.py  tasks.py  templates.py  tenant_keys.py  usage.py  webhooks.py  ws.py
backend/src/orchestration/mcp/: client.py  plugin_adapter.py  registry.py  skill_adapter.py
backend/src/orchestration/orchestration/: __init__.py  aggregator.py  decomposer.py  engine.py  executor.py  router.py
backend/src/orchestration/plugins/: loader.py  prompt_plugin.py  prompt_skill.py  registry.py
backend/src/orchestration/providers/: _base_http.py  _streaming.py
backend/src/orchestration/scheduler/: setup.py
backend/src/orchestration/shared/: __init__.py  config.py  enums.py  errors.py  protocols.py  types.py
backend/src/orchestration/transformer/: __init__.py  base.py  canonical.py  registry.py
backend/src/orchestration/wiring/: __init__.py  bootstrap.py  container.py  telemetry.py
backend/tests/: test_rls_security.py
backend/tests/integration/: conftest.py  test_api_e2e.py  test_storage_postgres.py  test_storage_redis.py  test_tenant_key_and_billing.py
frontend/: .env.example  index.html  (+4 more)
(+156 files in other folders)
