[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-orchestration"
version = "0.1.0"
description = "SaaS-grade multi-tenant LLM orchestration platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "apscheduler[sqlalchemy]>=3.10.0",
    "psycopg2-binary>=2.9.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "mcp>=1.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
pgvector = [
    "pgvector>=0.3.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.370",
    "testcontainers[postgres,redis]>=4.7.0",
]
otel = [
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src", "tests"]
pythonpath = ["src"]
markers = [
    "integration: integration tests requiring Docker (run with -m integration)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
pythonPath = "src"
